Added comment and JVM flags from excilys/gatling@78104aedb1